# entertainarr

./: .dockerignore  .gitignore  .release-plz.toml  Cargo.toml  build.sh  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  main.yml  release-package.yml  release-plz.yml  release-pr.yml  release.yml
adapter-http/: Cargo.toml
adapter-http/src/: lib.rs
adapter-http/src/client/: auth.rs  podcast.rs
adapter-http/src/entity/: auth.rs  mod.rs  podcast.rs
adapter/http/: CHANGELOG.md  Cargo.toml
adapter/http/src/: lib.rs
adapter/http/src/client/: auth.rs  mod.rs  podcast.rs  podcast_episode.rs
adapter/http/src/entity/: auth.rs  mod.rs  podcast.rs  podcast_episode.rs
adapter/http/src/server/: mod.rs  prelude.rs
adapter/http/src/server/extractor/: user.rs
adapter/http/src/server/handler/: client.rs  mod.rs  prelude.rs  status.rs
adapter/http/src/server/handler/auth/: login.rs  mod.rs  signup.rs
adapter/http/src/server/handler/podcast/: mod.rs  subscribe.rs  unsubscribe.rs  user_list.rs
adapter/http/src/server/handler/podcast_episode/: list.rs  mod.rs
adapter/http/src/server/middleware/: tracing.rs
adapter/jsonwebtoken/: CHANGELOG.md  Cargo.toml
adapter/jsonwebtoken/src/: auth.rs
adapter/rss/: CHANGELOG.md  Cargo.toml
adapter/rss/src/: parser.rs  podcast.rs  tracing.rs
adapter/sqlite/: CHANGELOG.md  Cargo.toml
adapter/sqlite/migrations/: 20251009060002_create-user-podcasts_up.sql  20251009060003_create-user-podcast-episodes_up.sql
adapter/sqlite/src/: auth.rs  lib.rs  podcast.rs  podcast_episode.rs
assets/podcast/: la-derniere.xml  rustacean-station.rss
client/cli/: Cargo.toml
client/cli/src/: effect.rs  lib.rs  main.rs
client/cli/src/view/: authentication.rs  home.rs  init.rs  mod.rs
client/core/: CHANGELOG.md  Cargo.toml
client/core-types/: Cargo.toml  build.rs
client/core/src/: lib.rs
client/core/src/application/: mod.rs  router.rs  session.rs
client/core/src/application/authenticated/: mod.rs
client/core/src/application/authenticated/home/: execute.rs  mod.rs  update.rs
client/core/src/application/authenticated/podcast/: mod.rs
client/core/src/application/authenticated/podcast/dashboard/: execute.rs  mod.rs  update.rs
client/core/src/application/authenticated/podcast/subscribe/: execute.rs  mod.rs  update.rs
client/core/src/application/authentication/: execute.rs  mod.rs
client/core/src/authentication/: api.rs  mod.rs
client/core/src/capability/: http.rs  persistence.rs
client/core/src/domain/: mod.rs
client/core/src/domain/authentication/: execute.rs  mod.rs  update.rs
client/core/src/domain/home/: execute.rs  mod.rs  update.rs
client/core/src/domain/init/: mod.rs  update.rs
client/core/src/domain/podcast_subscription/: mod.rs  update.rs
client/core/src/effect/: http.rs  mod.rs  persistence.rs
client/core/src/entity/: mod.rs  podcast.rs  podcast_episode.rs
client/core/src/home/: mod.rs
client/core/src/init/: mod.rs
client/web-leptos/: .gitignore  CHANGELOG.md  Cargo.toml  Trunk.toml  index.css  index.html  style.css
client/web-leptos/src/: core.rs  lib.rs  main.rs
client/web-leptos/src/component/: form_layout.rs  fullscreen_layout.module.scss  fullscreen_layout.rs  header.module.scss  header.rs  mod.rs  podcast_card.module.scss  podcast_card.rs  podcast_episode_cardlet.module.scss  podcast_episode_cardlet.rs  sidebar.module.scss  sidebar.rs  toggle_tabs.module.scss  toggle_tabs.rs
client/web-leptos/src/component/form/: button.module.scss  button.rs  error_message.module.scss  error_message.rs  form_group.module.scss  form_group.rs  layout.module.scss  layout.rs  mod.rs  title.module.scss  title.rs
client/web-leptos/src/component/fullscreen/: layout.module.scss  layout.rs  mod.rs  sidebar.module.scss  sidebar.rs
client/web-leptos/src/context/: core.rs  mod.rs  router.rs
client/web-leptos/src/service/: http.rs  storage.rs
client/web-leptos/src/view/: authentication.module.scss  authentication.rs  home.module.scss  home.rs  mod.rs
client/web-leptos/src/view/authentication/: mod.rs
client/web-leptos/src/view/home/: home.module.scss  mod.rs  style.scss
client/web-leptos/src/view/podcast_dashboard/: mod.rs  podcast_dashboard.module.scss
client/web-leptos/src/view/podcast_subscribe/: mod.rs
client/web-leptos/src/view/podcast_subscription/: mod.rs  style.scss
domain/: CHANGELOG.md  Cargo.toml
domain/src/: prelude.rs
domain/src/auth/: entity.rs  prelude.rs
domain/src/podcast/: mod.rs  prelude.rs
migrations/: 20251007060000_create-users_up.sql  20251009060001_create-podcast-episodes_up.sql
scripts/: Dockerfile  builder.Dockerfile  package-local.sh
server/: CHANGELOG.md  Cargo.toml  builder.dockerfile  config.toml
server/migrations/: 20251009060000_create-podcasts_up.sql
server/package/: config.toml
server/package/scripts/: preinst
server/package/systemd/: entertainarr.default  entertainarr.service
server/src/: client.rs  lib.rs  main.rs  tracing.rs
server/src/adapter/: mod.rs
server/src/adapter/http_server/: mod.rs  prelude.rs
server/src/adapter/http_server/handler/: mod.rs  prelude.rs  status.rs
server/src/adapter/http_server/handler/auth/: login.rs  mod.rs  signup.rs
server/src/adapter/http_server/handler/podcast/: mod.rs  subscribe.rs  unsubscribe.rs  user_list.rs
server/src/adapter/http_server/handler/podcast_episode/: list.rs  mod.rs
server/src/adapter/http_server/middleware/: tracing.rs
server/src/adapter/jsonwebtoken/: auth.rs  mod.rs
server/src/adapter/rss/: mod.rs
server/src/adapter/sqlite/: auth.rs  mod.rs  podcast.rs  podcast_episode.rs
server/src/domain/: mod.rs  prelude.rs
server/src/domain/auth/: prelude.rs
server/src/domain/podcast/: entity.rs  mod.rs  prelude.rs
server/tests/: podcast.rs  shared.rs
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/http_server/: mod.rs  prelude.rs
src/adapter/jsonwebtoken/: auth.rs  mod.rs
src/adapter/rss/: mod.rs  parser.rs  podcast.rs  tracing.rs
src/adapter/sqlite/: auth.rs  mod.rs  podcast.rs
src/domain/auth/: entity.rs  (+2 more)
(+14 files in other folders)
