[workspace]
resolver = "2"
members = [
  "adapter-http",
  "client/cli",
  "client/core",
  "server",
]

[workspace.package]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["crux"]
rust-version = "1.89"

[workspace.dependencies]
entertainarr-adapter-http = { path = "./adapter-http" }
serde = { version = "1.0", features = ["derive"] }
