[workspace]
resolver = "2"
members = [
  "adapter/http",
  "adapter/jsonwebtoken",
  "adapter/rss",
  "adapter/sqlite",
  "client/cli",
  "client/core", "client/core-types",
  "domain",
  "server",
]

[workspace.package]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["crux"]
rust-version = "1.89"

[workspace.dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", default-features = false }
entertainarr-adapter-http = { path = "./adapter/http" }
entertainarr-adapter-jsonwebtoken = { path = "./adapter/jsonwebtoken" }
entertainarr-adapter-rss = { path = "./adapter/rss" }
entertainarr-adapter-sqlite = { path = "./adapter/sqlite" }
entertainarr-client-core = { path = "./client/core" }
entertainarr-domain = { path = "./domain" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47" }
tracing = { version = "0.1" }
