[package]
name = "entertainarr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64ct = { version = "1.8", features = ["alloc"] }
bon = "3.8"
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
jsonwebtoken = { version = "9.3", default-features = false }
monostate = "1.0"
nutype = "0.6"
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots"] }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs", "metrics", "rt-tokio", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["http2", "rustls-tls"] }
roxmltree = { version = "0.21" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite"] }
thiserror = { version = "2.0" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[dev-dependencies]
mockall = "0.13"
tower = "0.5"
