[package]
name = "entertainarr"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
entertainarr-adapter-http = { workspace = true, features = ["server"] }
entertainarr-adapter-jsonwebtoken = { workspace = true }
entertainarr-adapter-rss = { workspace = true }
entertainarr-adapter-sqlite = { workspace = true }
entertainarr-domain = { workspace = true }
include_dir = "0.7"
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots"] }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs", "metrics", "rt-tokio", "trace"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[dev-dependencies]
entertainarr-adapter-http = { workspace = true, features = ["client"] }
mockall = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3"
tower = "0.5"

[package.metadata.deb]
name = "entertainarr"
maintainer-scripts = "package/scripts"
conf-files = ["/etc/default/entertainarr"]
assets = [
    ["target/release/entertainarr", "/usr/bin/", "755"],
    ["package/systemd/entertainarr.default", "/etc/default/entertainarr", "600"],
    ["package/config.toml", "/etc/entertainarr/config.toml.example", "600"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "package/systemd/"
enable = true
restart-after-upgrade = true
start = true
