[package]
name = "entertainarr-adapter-http"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
client = ["dep:anyhow", "dep:reqwest"]
server = ["dep:anyhow", "dep:axum", "dep:entertainarr-domain", "dep:serde_qs", "dep:tower-http", "dep:tokio"]

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }
chrono = { workspace = true, default-features = false, features = ["now", "serde"] }
entertainarr-domain = { workspace = true, optional = true }
monostate = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"], optional = true }
serde = { workspace = true }
serde_qs = { version = "0.15", features = ["axum"], optional = true }
tokio = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
entertainarr-domain = { workspace = true, features = ["mocks"] }
tokio = { workspace = true }
tower = "0.5"
