[package]
name = "entertainarr-adapter-rss"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
entertainarr-domain = { workspace = true }
http = "1.3"
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["http2", "rustls-tls"] }
roxmltree = { version = "0.21" }
serde = { workspace = true }
tracing = { workspace = true }
