[package]
name = "entertainarr-adapter-sqlite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
entertainarr-domain = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
serde_json = "1.0"
tempfile = "3"
