[package]
name = "entertainarr-client-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
crux_core = "0.16"
crux_http = "0.15"
entertainarr-client-core = { path = "../core" }
inquire = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync"] }
