[package]
name = "entertainarr-client-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "entertainarr_client_core"

[features]
typegen = ["crux_core/typegen", "crux_http/typegen"]

[dependencies]
chrono = { workspace = true, default-features = false }
crux_core = "0.16"
crux_http = "0.15"
derive_more = { version = "2.0", features = ["from"] }
entertainarr-adapter-http = { workspace = true }
facet = { workspace = true, features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tracing = { workspace = true }
