[package]
name = "entertainarr-client-web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
crux_http = "0.15"
entertainarr-client-core = { path = "../core" }
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json"] }
js-sys = "0.3.81"
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8", features = ["tracing"] }
stylance = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
tracing-subscriber-wasm = "0.1"
web-sys = { version = "0.3", features = ["RadioNodeList"] }
